# dbos-workflow-benchmarks

./: .gitignore  README.md  main.tf
benchmarks/: benchmark_ai.py  benchmark_dbos.py  benchmark_dbos_async.py  benchmark_express_workflow.py  benchmark_standard_workflow.py
dbos-benchmark-app/: dbos-config.yaml  package-lock.json  package.json
dbos-benchmark-app/src/: operations.ts
dbos-py-benchmark-app/: README.md  dbos-0.10.0a70+g656d1ab-py3-none-any.whl  dbos-0.8.0a29+gf3bd6b5-py3-none-any.whl  dbos-0.8.0a32+gee65170-py3-none-any.whl  dbos-0.8.0a38+g45e9945-py3-none-any.whl  dbos-config.yaml  pyproject.toml  requirements.txt
dbos-py-benchmark-app/bench/: main.py
dbos-py-benchmark-app/dbos_py_benchmark_app/: main.py
dbos-py-benchmark-app/migrations/: env.py
lambda/: hello_world.js  sfn_executor.js
lambda-python/: lambda_function.py  requirements.txt
lambda/lambda_transaction/: index.js  package-lock.json  package.json
scripts/: zip_lambdas.sh
