[project]
name = "dbos-py-benchmark-app"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Qian Li", email = "qian.li@dbos.dev"},
]
dependencies = [
    "dbos==0.7.1",
]
requires-python = ">3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
