[project]
name = "dbos-py-benchmark-app"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Qian Li", email = "qian.li@dbos.dev"},
]
dependencies = [
    "dbos @ file:///${PROJECT_ROOT}/dbos-0.8.0a29%2Bgf3bd6b5-py3-none-any.whl",
    "file:///${PROJECT_ROOT}/dbos-0.8.0a29%2Bgf3bd6b5-py3-none-any.whl",
]
requires-python = ">3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
